--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ display: flex;
 border:3px solid black;
 padding: 30px;
 position: relative;
+flex-direction: row;
 
 }
 
@@ -44,4 +45,47 @@ position:absolute;
 top:400px;
 right: 385px;
 text-shadow: 5px 6px 8px black;
+}
+
+.homepageimage1{
+width:500px;
+height: 400px;
+position: absolute;
+top: 500px;
+left:590px;
+border: 4px solid rgb(83, 6, 6)
+}
+
+.firstparagraph{
+font-size: 15px;
+font-family: lucida;
+position: absolute;
+top: 500px;
+left: 100px;
+max-width: 400px;
+font-weight: 500;
+}
+
+.thirdheading{
+font-size: 20px;
+font-family: lucida;
+position: absolute;
+top: 648px;
+left:200px;
+font-weight: 900;
+color: rgb(41, 3, 3);
+}
+
+.firstlist{
+    font-size: 15px;
+    font-family: lucida;
+    position: absolute;
+    top: 690px;
+    left: 100px;
+    max-width: 400px;
+    font-weight: 500;
+}
+
+.firstbold, .secondbold, .thirdbold{
+    font-weight: bold;
 }
