--- a/styles.css
+++ b/styles.css
@@ -1,128 +1,156 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body{
-    background-color: rgb(77, 7, 77);
+    background-color: rgba(121, 6, 48, 0.944);
+    height: 300vh;
+    width: 1280px;
 }
 
-h1 {
-font-size: 70px;
-Color: white ;
+.container{
+    Padding: 50px;
+    margin: 30px;
+    background-color: black;
+    height:100%;
+    width: 100%;
+    margin: 30px;
+    }
+
+.Firstheading {
+font-size: 64px;
+Color:  rgba(121, 6, 48, 0.944);
 font-weight: 900;
-
+margin-top: 20px;
+text-align: center;
 }
 
-.mainpage{
-background-color: white;
-width:950px;
-height:1500px;
-margin-left: 40px;
-margin-right: 40px;
-display: flex;
-border:3px solid black;
-padding: 30px;
-position: relative;
-flex-direction: row;
+.navbar{
+    display: flex;
+    gap: 100px;
+}
 
-
+.navcontent{
+    display: flex;
+    gap: 40px;
+    padding-left: 120px;
 }
 
 .companylogo{
-width:200px;
-height:140px;
-position: absolute;
-top:230px;
-right:520px;
+    width:200px;
+    height:140px;
+    }
 
-   
+.home, .aboutus, .contactus, .services, .login{
+    text-decoration: none;
+    font-size: 18px;
+    color:rgb(83, 6, 6);
+    font-weight: bold;
+
 }
+.home:hover, .aboutus:hover, .contactus:hover, .services:hover, .login:hover{
+    background-color: darkgoldenrod;
+    border-radius: 6px;
+}
+
 
 .secondheading{
 font-family: 'Times New Roman', Times, serif;
-font-size: 25px;
+font-size: 20px;
 font-weight: bold;
-color: rgb(100, 4, 4);
-position:absolute;
-top:400px;
-right: 385px;
-text-shadow: 5px 6px 8px black;
+color:darkgoldenrod;
+text-align: center;
 
 }
 
-.homepageimage1{
-width:500px;
-height: 400px;
-position: absolute;
-top: 500px;
-left:590px;
+.bigpencilimage{
+width:680px;
+height: 500px;
 background-image: url("./whiteimage.png");
 border: 4px solid rgb(83, 6, 6);
+margin-top: 60px;
+}
 
+.bigpencilimage{
+    position: relative;
 }
 
 .whitebackground{ 
     width:150px;
     height:180px;
     position: absolute;
-    top:623px;
-    right:220px;
-   
+    top: 560px;
+    right: 250px;
 }
-
 
 .companylogo2{
     width:100px;
     height:70px;
-    position: absolute;
-    top:680px;
-    right:245px;
-   
+    position:absolute;
+    top: 625px;
+    right: 280px;
+}
+
+
+.paragraphsandlist{
+    margin-top: 54px;
 }
 
 .firstparagraph{
-font-size: 15px;
+font-size: 18px;
 font-family: lucida;
-position: absolute;
-top: 500px;
-left: 100px;
 max-width: 400px;
 font-weight: 500;
+text-align: center;
 }
 
 .thirdheading{
-font-size: 20px;
+font-size: 23px;
 font-family: lucida;
-position: absolute;
-top: 648px;
-left:200px;
 font-weight: 900;
-color: rgb(41, 3, 3);
+color: darkgoldenrod;
+margin-top: 20px;
+padding-left: 120px ;
+}
 
+.list{
+    margin-top: 15px;
+}
+
+.wrapper{
+    display: flex;
+    justify-content: space-between;
+ 
 }
 
 .firstlist{
-    font-size: 15px;
+    font-size: 18px;
     font-family: lucida;
-    position: absolute;
-    top: 690px;
-    left: 100px;
     max-width: 400px;
     font-weight: 500;
+
 
 }
 
 .firstbold, .secondbold, .thirdbold{
     font-weight: bold;
+    color: rgba(121, 6, 48, 0.944);
+
 }
+.plist1, .plist2, .plist3{
+    margin-bottom: 8px;
+}
+
+
 
 .firstbutton{
 width:220px;
-height: auto;
 background-color: rgb(82, 82, 7);
-text-align: center;
 color: white;
 font-family: lucida;
-position: absolute;
-top:970px;
-left:470px;
-flex-direction: row;
 border-radius: 10px;
 
 
