--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ body{
 .container{
     Padding: 50px;
     margin: 30px;
-    background-color: black;
+    background-color: white;
     height:100%;
     width: 100%;
     margin: 30px;
